Sun May  5 15:38:34 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_delete.c (dbdelete): Don't scribble over the list
	  returned by list_extensions(). We need it shortly afterwards to
	  construct the new multi key.

Fri May  3 19:43:52 BST 2002  Colin Watson  <cjwatson@debian.org>

	* include/manconfig.h.in (LESS_OPTS): Add the -R flag, which helps
	  with displaying the ANSI colour escapes generated by groff 1.18.

Fri May  3 19:27:40 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/man.c (add_roff_line_length): New function, adding -rLL and
	  -rLT to the groff command line (supported in groff >= 1.18).
	  (make_roff_command): Call add_roff_line_length(). The old code to
	  set .ll and .lt remains for compatibility purposes.

Wed May  1 02:16:11 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (testmandirs): Include the subdirectory name
	  in the "Updating index cache" message.

Wed May  1 02:05:02 BST 2002  Colin Watson  <cjwatson@debian.org>

	* libdb/db_store.c: Make sure the check for whether a replace is
	  necessary in situation (3) behaves as it did before the multi key
	  format changes.

	* libdb/db_lookup.c (copy_if_set, dash_if_unset): Constify
	  arguments.
	* libdb/db_storage.h: Likewise for prototypes.
	* src/convert_name.c (gripe_converting_name): name should be const.
	* src/manp.c (get_catpath): suffix should be const.

Wed May  1 00:14:20 BST 2002  Colin Watson  <cjwatson@debian.org>

	* src/globbing.c (match_in_directory): Close the directory after
	  reading through it.

Wed May  1 00:02:53 BST 2002  Colin Watson  <cjwatson@debian.org>

	Case-(in)sensitivity in database lookups should work properly now.

	* libdb/db_lookup.c (gripe_bad_multi_key): New function.
	  (make_multi_key): Don't lowercase page any more - that happens
	  elsewhere.
	  (list_extensions): We now return names/extensions, not just
	  extensions.
	  (dblookup): Multi keys are now formed as "RealCase.1" rather than