@@ -109,9 +109,12 @@ digit		[[:digit:]]
 upper		[[:upper:]]
 alpha		[[:alpha:]]
 blank		[[:blank:]]
-blank_eol	[[:blank:]\n]
-bol		\n+
-next		\n*
+blank_eol	[[:blank:]\r\n]
+eol		\r?\n
+bol		{eol}+
+next		{eol}*
+empty		{eol}{blank}*
+indent		{eol}{blank}+
 dbl_quote	\"
 font_change	\\f([[:upper:]1-4]|\({upper}{2})
 size_change	\\s[+-]?{digit}
@@ -150,16 +153,16 @@ vgrind_request	\.vS
 
  /* begin NAME section processing */
 <MAN_FILE>{sec_request}{blank_eol}+{name_sec}{blank}*	BEGIN (MAN_NAME);
-<CAT_FILE>(\n{blank}*){2,}{name}{blank}*\n{blank}+	BEGIN (CAT_NAME);
+<CAT_FILE>{empty}{2,}{name}{blank}*{indent}		BEGIN (CAT_NAME);
 
  /* general text matching */
-<MAN_FILE>\.[^Ss\n].*{next}				|
+<MAN_FILE>\.[^Ss\r\n].*{next}				|
 <MAN_FILE>\..{0,3}{dbl_quote}?.{0,4}{dbl_quote}? 	|
 <MAN_FILE>{comment}.*{next}				|
 <CAT_FILE>.{1,9}					|
 <CAT_FILE>[ ]*						|
-<CAT_FILE>\n{2,}					|
-<MAN_FILE,CAT_FILE>.|\n
+<CAT_FILE>{eol}{2,}					|
+<MAN_FILE,CAT_FILE>.|{eol}
 
 <MAN_REST>{
 	{bol}{tbl_request}		filters[TBL_FILTER] = 't';
@@ -174,10 +177,10 @@ vgrind_request	\.vS
 					*p_name = '\0'; /* terminate the string */
 					yyterminate ();
 				}
-<MAN_REST>.+|\n
+<MAN_REST>.+|{eol}
 
  /* rules to end NAME section processing */
-<FORCE_EXIT>.|\n		{	/* forced exit */
+<FORCE_EXIT>.|{eol}		{	/* forced exit */
 					*p_name = '\0'; /* terminate the string */
 					yyterminate ();
 				}
@@ -185,13 +188,13 @@ vgrind_request	\.vS
 <MAN_NAME>{bol}{sec_request}{blank}*	| 	/* Another section */
 <MAN_NAME>{bol}\.X{upper}{blank}+	|	/* special - hpux */
 <MAN_NAME>{bol}\.sp{blank}*		|	/* vertical spacing */
-<MAN_NAME>\n{blank}*{bol}.+	{	/* terminate the string */
+<MAN_NAME>{empty}{bol}.+	{	/* terminate the string */
 					*p_name = '\0';
 					BEGIN (MAN_REST);
 				}
 
 <CAT_NAME>{bol}S[yYeE]			|
-<CAT_NAME>\n{2,}.+			|
+<CAT_NAME>{eol}{2,}.+			|
 <CAT_NAME>{next}__		{	/* terminate the string */
 					*p_name = '\0';
 					BEGIN (CAT_REST);
@@ -215,7 +218,7 @@ vgrind_request	\.vS
 <MAN_NAME>{bol}\.nf.*			fill_mode = 0;
 <MAN_NAME>{bol}\.fi.*			fill_mode = 1;
 
-<CAT_NAME>-\n{blank_eol}*		/* strip continuations */
+<CAT_NAME>-{eol}{blank_eol}*		/* strip continuations */
 
  /* convert to DASH */
 <MAN_NAME>{next}{blank}*\\\((mi|hy|em){blank}*	|
@@ -235,7 +238,7 @@ vgrind_request	\.vS
 	{next}\\\((ru|ul)		add_char_to_whatis ('_');
 	{next}\\\\t			add_char_to_whatis ('\t');
 
-	{next}\\[|^&!%acdpruz{}\n]	/* various useless control chars */
+	{next}\\[|^&!%acdpruz{}\r\n]	/* various useless control chars */
 	{next}\\[bhlLvx]{blank}*'[^']+'	/* various inline functions */
 
 	{next}\\\$[1-9]			/* interpolate arg */
@@ -279,7 +282,7 @@ vgrind_request	\.vS
 <MAN_NAME>[[:alnum:]]*		add_str_to_whatis (yytext, yyleng);
 
  /* normalise the period (,) separators */
-<CAT_NAME>{blank}*,[ \t\n]*		|
+<CAT_NAME>{blank}*,[ \t\r\n]*		|
 <MAN_NAME>{blank}*,{blank}*		add_str_to_whatis (", ", 2);
 
 <CAT_NAME,MAN_NAME>{bol}.	{
