@@ -1,3 +1,7 @@
+Sun May  5 17:49:21 BST 2002  Colin Watson  <cjwatson@debian.org>
+
+	* src/lexgrog.l: Accept DOS line-ending conventions.
+
 Sun May  5 15:38:34 BST 2002  Colin Watson  <cjwatson@debian.org>
 
 	* libdb/db_delete.c (dbdelete): Don't scribble over the list
